# Cassowary

./: .gitignore  CMakeLists.txt  README.md  clean.sh  licence  run.sh
src/: main.cpp
src/window/: glfwInit.cpp  glfwInit.hpp
